--- a/Ejecutable/templates/intranet_home.html
+++ b/Ejecutable/templates/intranet_home.html
@@ -341,23 +341,34 @@
         <section class="social-links">
           <h2 style="color: #53565a">Síguenos en:</h2>
           <div class="social-icons">
-            <div class="social-icon">
-              <img src="/static/images/ico_ig.png" alt="Instagram" />
-            </div>
-            <div class="social-icon">
-              <img src="/static/images/ico_fb.png" alt="Facebook" />
-            </div>
-            <div class="social-icon">
-              <img src="/static/images/ico_in.png" alt="LinkedIn" />
-            </div>
-            <div class="social-icon twitter">
-              <img src="/static/images/ico_twitter.png" alt="Twitter" />
-            </div>
-            <div class="social-icon">
-              <img src="/static/images/ico_tiktok.png" alt="TikTok" />
-            </div>
+              <div class="social-icon">
+                  <a href="https://www.instagram.com/upsjb/" target="_blank">
+                      <img src="/static/images/ico_ig.png" alt="Instagram"/>
+                  </a>
+              </div>
+              <div class="social-icon">
+                  <a href="https://www.facebook.com/UPSJBSAC" target="_blank">
+                      <img src="/static/images/ico_fb.png" alt="Facebook"/>
+                  </a>
+              </div>
+              <div class="social-icon">
+                  <a href="https://pe.linkedin.com/school/universidad-privada-san-juan-bautista/" target="_blank">
+                      <img src="/static/images/ico_in.png" alt="LinkedIn"/>
+                  </a>
+              </div>
+              <div class="social-icon twitter">
+                  <a href="https://twitter.com/UPSJB" target="_blank">
+                      <img src="/static/images/ico_twitter.png" alt="Twitter"/>
+                  </a>
+              </div>
+              <div class="social-icon">
+                  <a href="https://www.tiktok.com/@aprendeconlasanjuan" target="_blank">
+                      <img src="/static/images/ico_tiktok.png" alt="TikTok"/>
+                  </a>
+              </div>
           </div>
-        </section>
+      </section>
+      
       </main>
       <footer class="footer">
         <div class="footer-links">
