--- a/Ejecutable/templates/login.html
+++ b/Ejecutable/templates/login.html
@@ -69,11 +69,11 @@
         padding: 2em;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         text-align: left; /* Alinear el texto a la izquierda */
-        max-width: 400px;
+        max-width: 379px;
         width: 100%;
         position: relative;
         z-index: 1;
-        min-height: 300px; /* Ajustar la altura mínima según sea necesario */
+        min-height: 379px; /* Ajustar la altura mínima según sea necesario */
         margin-bottom: 7.5px; /* Reducir el margen inferior */
       }
 
@@ -136,6 +136,7 @@
       .login-container button[type="submit"]:hover {
         background-color: #004080;
       }
+
       /* Estilos actualizados para el contenedor de ayuda */
       .help-box {
         position: absolute;
@@ -147,6 +148,7 @@
         text-align: left; /* Alinear el texto a la izquierda */
         width: 100%; /* Ancho completo del contenedor */
         box-sizing: border-box; /* Asegura que el padding se incluya en el ancho */
+        padding-left: 30px; /* Añadido margen izquierdo */
       }
 
       .help-box p {
